fix: landing pages style

--- a/Landing Pages/landing-page.html
+++ b/Landing Pages/landing-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quarrix</title>
+    <title>ProTect</title>
     <link rel="stylesheet" href="./styles/cerise_v1.0.0.css" />
     <link rel="stylesheet" href="./styles/fonts/_fonts.css" />
     <link
@@ -18,10 +18,10 @@
         <div class="quarrix-lp-hero__banner">
           <div class="quarrix-lp-hero__banner-wrap">
             <img
-              src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Frame%201171275749.png"
+              src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275749.png"
               alt="" />
             <img
-              src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Group%20627424.png"
+              src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Group-20627424.png"
               alt="" />
           </div>
         </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="quarrix-lp-hero__image quarrix-lp-hero__image-absolute">
           <img
-            src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/df613fe81fd025a6196c72dc6da81458.png"
+            src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/df613fe81fd025a6196c72dc6da81458.png"
             alt="hero-img" />
         </div>
       </div>
@@ -59,7 +59,7 @@
       <div class="quarrix-lp-banner-v1">
         <img
           class="quarrix-lp-banner-v1__vector"
-          src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Frame%201171275748.png"
+          src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275748.png"
           alt="" />
         <div class="quarrix-lp-banner-v1__wrap">
           <div class="quarrix-lp-banner-v1__copy">
@@ -122,7 +122,7 @@
               </defs>
             </svg>
             <img
-              src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Rectangle%2022.png"
+              src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Rectangle-2022.png"
               alt="" />
           </div>
         </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="experience-the-benefits__card swiper-slide">
                   <img
-                    src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/df613fe81fd025a6196c72dc6da81458.png"
+                    src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/df613fe81fd025a6196c72dc6da81458.png"
                     alt="image" />
                   <h3>Comprehensive Protection</h3>
                   <p>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="experience-the-benefits__card swiper-slide">
                   <img
-                    src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Frame%201171275739.png"
+                    src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275739.png"
                     alt="image" />
                   <h3>Durability and Longevity</h3>
                   <p>
@@ -211,7 +211,7 @@
             </a>
             <img
               class="quarrix-lp-banner-v2__right_img"
-              src="https://4188535.fs1.hubspotusercontent-na1.net/hubfs/4188535/Frame%201263.png"
+              src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201263.png"
               alt="Banner Image"
               loading="lazy" />
           </div>
@@ -250,7 +250,7 @@
     </section>
 
     <section class="txtl-wrapper">
-      <div class="quarrix-lp-subscription">
+      <div class="quarrix-lp-subscription" style="background: url('https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Siding-20Panels-20Background.png');">
         <div class="quarrix-lp-container">
           <div class="quarrix-lp-subscription__wrap">
             <div class="quarrix-lp-subscription__heading">
