fix: fixed landing page style

--- a/Landing Pages/landing-page.html
+++ b/Landing Pages/landing-page.html
@@ -5,12 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProTect</title>
-    <link rel="stylesheet" href="./styles/cerise_v1.0.0.css" />
+    <link rel="stylesheet" href="./styles/cerise.css" />
     <link rel="stylesheet" href="./styles/fonts/_fonts.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
   <body>
     <section class="txtl-wrapper">
@@ -183,6 +179,20 @@
               </div>
             </div>
           </div>
+          <div class="experience-the-benefits_arrows_wrapper">
+            <div class="cards-swiper__left">
+              <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M32 0.533324C14.6214 0.533323 0.53332 14.6214 0.533319 32C0.533318 49.3786 14.6214 63.4667 32 63.4667C49.3786 63.4667 63.4667 49.3786 63.4667 32C63.4667 14.6214 49.3786 0.533325 32 0.533324Z" fill="white" stroke="#D9D9D9" stroke-width="1.06667"/>
+                <path d="M41.6426 30.7919C42.3098 30.7919 42.8506 31.3328 42.8506 32C42.8506 32.6672 42.3098 33.2081 41.6426 33.2081L41.6426 30.7919ZM22.7077 32.8542C22.2359 32.3825 22.2359 31.6176 22.7077 31.1458L30.3958 23.4577C30.8676 22.9859 31.6325 22.9859 32.1042 23.4577C32.576 23.9295 32.576 24.6944 32.1042 25.1662L25.2704 32L32.1042 38.8338C32.576 39.3056 32.576 40.0705 32.1042 40.5423C31.6325 41.0141 30.8676 41.0141 30.3958 40.5423L22.7077 32.8542ZM41.6426 33.2081L23.562 33.2081L23.562 30.7919L41.6426 30.7919L41.6426 33.2081Z" fill="black"/>
+              </svg>  
+            </div>
+            <div class="cards-swiper__right">
+              <svg width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M32 0.533324C49.3786 0.533323 63.4667 14.6214 63.4667 32C63.4667 49.3786 49.3786 63.4667 32 63.4667C14.6214 63.4667 0.533333 49.3786 0.533332 32C0.533331 14.6214 14.6214 0.533325 32 0.533324Z" fill="white" stroke="#D9D9D9" stroke-width="1.06667"/>
+                <path d="M22.3574 30.7919C21.6902 30.7919 21.1494 31.3328 21.1494 32C21.1494 32.6672 21.6902 33.2081 22.3574 33.2081L22.3574 30.7919ZM41.2923 32.8542C41.7641 32.3825 41.7641 31.6176 41.2923 31.1458L33.6042 23.4577C33.1324 22.9859 32.3675 22.9859 31.8958 23.4577C31.424 23.9295 31.424 24.6944 31.8958 25.1662L38.7296 32L31.8958 38.8338C31.424 39.3056 31.424 40.0705 31.8958 40.5423C32.3675 41.0141 33.1324 41.0141 33.6042 40.5423L41.2923 32.8542ZM22.3574 33.2081L40.438 33.2081L40.438 30.7919L22.3574 30.7919L22.3574 33.2081Z" fill="black"/>
+              </svg>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -280,6 +290,6 @@
       </div>
     </section>
 
-    <script src="./scripts/cerise_v1.0.0.js"></script>
+    <script src="./scripts/cerise.js"></script>
   </body>
 </html>
