inline styles for kentico override

--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -391,11 +391,11 @@
                         </div>
                         <div class="quarrix_faq_section__item_answer_wrapper">
                             <div class="quarrix_faq_section__item_answer">
-                                <p>Yes, for two reasons:</p>
+                                <p style="font-size: 20px !important;">Yes, for two reasons:</p>
                             
                                 <ul>
-                                    <li>Quarrix ventilation products don’t have external baffles that can be clogged with leaves, etc.</li>
-                                    <li>The most crucial element to the performance of a ventilation system is that it is in balanced. If an attic has a properly balanced system, the airflow will move from the eaves and the bottom of the attic to the top, pushing out heat and moisture in a natural flow using air pressure, thermal effect and diffusion. If the system were to be unbalanced, and the NFA at the ridge is higher than at the eave, a reverse airflow can occur causing an opposite effect to what is desired. Baffles have no effect on achieving a balanced system. For a system to be in balanced there must be an equal or greater amount of intake at the eaves than what is being exhausted at the ridge.</li>
+                                    <li style="font-size: 20px !important;">Quarrix ventilation products don’t have external baffles that can be clogged with leaves, etc.</li>
+                                    <li style="font-size: 20px !important;">The most crucial element to the performance of a ventilation system is that it is in balanced. If an attic has a properly balanced system, the airflow will move from the eaves and the bottom of the attic to the top, pushing out heat and moisture in a natural flow using air pressure, thermal effect and diffusion. If the system were to be unbalanced, and the NFA at the ridge is higher than at the eave, a reverse airflow can occur causing an opposite effect to what is desired. Baffles have no effect on achieving a balanced system. For a system to be in balanced there must be an equal or greater amount of intake at the eaves than what is being exhausted at the ridge.</li>
                                 </ul>
                             </div>
                         </div>
