fix: second lp section container

--- a/Landing Pages/landing-page.html
+++ b/Landing Pages/landing-page.html
@@ -58,17 +58,19 @@
           src="https://www.quarrix.com/QuarrixDev/media/ProTect-Starter-Lander/Frame-201171275748.png"
           alt="" />
         <div class="quarrix-lp-banner-v1__wrap">
-          <div class="quarrix-lp-banner-v1__copy">
-            <h2>
-              We’d like to give you $100 worth of our ProTect Siding Starter
-              Enough for you to complete an entire project — for free.
-            </h2>
-            <p>
-              We’re confident you’ll see why Quarrix ProTect Siding Starter is
-              the superior choice for siding starter. It’s made from
-              ultra-durable high-quality HDPE, which makes it both lightweight
-              and long-lasting.
-            </p>
+          <div class="quarrix-lp-banner-v1__copy__wrapper">
+            <div class="quarrix-lp-banner-v1__copy">
+              <h2>
+                We’d like to give you $100 worth of our ProTect Siding Starter
+                Enough for you to complete an entire project — for free.
+              </h2>
+              <p>
+                We’re confident you’ll see why Quarrix ProTect Siding Starter is
+                the superior choice for siding starter. It’s made from
+                ultra-durable high-quality HDPE, which makes it both lightweight
+                and long-lasting.
+              </p>
+            </div>
           </div>
           <div class="quarrix-lp-banner-v1__image">
             <svg
