--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -397,7 +397,7 @@
                         </div>
                         <div class="quarrix_faq_section__item_answer_wrapper">
                             <div class="quarrix_faq_section__item_answer">
-                                <p style="font-size: 20px !important;">Yes, for two reasons:</p>
+                                <p style="color: white; font-size: 20px !important;">Yes, for two reasons:</p>
                             
                                 <ul>
                                     <li style="font-size: 20px !important;">Quarrix ventilation products don’t have external baffles that can be clogged with leaves, etc.</li>
