feat: copy update

--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -389,7 +389,7 @@
                     </div>
                     <div class="quarrix_faq_section__item">
                         <div class="quarrix_faq_section__item_title_wrapper">
-                            <p class="quarrix_faq_section__item_question">Will Quarrix’StormStop® Ridge Vent perform as well as baffled products?</p>
+                            <p class="quarrix_faq_section__item_question">Will Quarrix StormStop® Ridge Vent perform as well as baffled products?</p>
                             <div class="quarrix_faq_section__item_close_icon">
                                 <span></span>
                                 <span></span>
