--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -81,7 +81,7 @@
                         </h2>
                         <p>
                             Quarrix StormStop® Ridge Vent delivers powerful attic ventilation while keeping rain, snow, and debris out. 
-                            Designed with weather-resistant filter technology, it ensures consistent airflow without compromising protection. Durable, efficient, and easy to install, StormStop® is the smart choice for a longer-lasting, high-performance roof.
+                            Designed with weather-resistant technology, it ensures consistent airflow without compromising protection. Durable, efficient, and easy to install, StormStop® is the smart choice for a longer-lasting, high-performance roof.
                         </p>
                         <div class="quarrix_video_section__button_wrapper">
                             <a class="quarrix_video_section__button btn btn-green" href="https://www.quarrix.com/find-a-dealer">
