--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -11,26 +11,48 @@
         <link rel="stylesheet" href="./styles/fonts/_fonts.css" />
     </head>
     <body>
-        
         <!-- Hero start -->
         <section class="txtl-wrapper">
-            <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/quarrix-hero-image.png');">
-                <div class="quarrix_hero__text_wrapper">
-                    <h1>For a Beautiful, Healthy Home Inside and Out</h1>
-                    <p>Quarrix offers durable, efficient roofing solutions that enhance your home’s beauty and protect it for years to come.</p>
-                    <div class="quarrix_hero__button_wrapper">
-                        <a class="quarrix_hero__button btn btn-white" href="https://www.quarrix.com/Contact-Forms/Contact-Us">
-                            GET IN TOUCH
-                            <svg width="17" height="17" viewBox="0 0 17 17" fill="#055641" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8.5 0C3.81158 0 0 3.81158 0 8.5C0 13.1884 3.81158 17 8.5 17C13.1884 17 17 13.1884 17 8.5C17 3.81158 13.1884 0 8.5 0ZM13.0811 9.16211L10.2358 12.0074C10.0568 12.1863 9.82421 12.2758 9.57368 12.2758C9.32316 12.2758 9.09053 12.1863 8.91158 12.0074C8.55368 11.6495 8.55368 11.0589 8.91158 10.6832L10.1642 9.43053H4.56316C4.04421 9.43053 3.63263 9.01895 3.63263 8.5C3.63263 7.98105 4.04421 7.56947 4.56316 7.56947H10.1821L8.92947 6.31684C8.57158 5.95895 8.57158 5.36842 8.92947 4.99263C9.28737 4.63474 9.8779 4.63474 10.2537 4.99263L13.0811 7.83789C13.4568 8.21368 13.4568 8.78632 13.0811 9.16211Z" fill=""/>
-                            </svg>
-                        </a>
-                        <a class="quarrix_hero__button btn btn-transparent" href="https://www.quarrix.com/About-Us/About-Us-(1)">
-                            LEARN MORE
-                            <svg width="17" height="17" viewBox="0 0 17 17" fill="#fff" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8.5 0C3.81158 0 0 3.81158 0 8.5C0 13.1884 3.81158 17 8.5 17C13.1884 17 17 13.1884 17 8.5C17 3.81158 13.1884 0 8.5 0ZM13.0811 9.16211L10.2358 12.0074C10.0568 12.1863 9.82421 12.2758 9.57368 12.2758C9.32316 12.2758 9.09053 12.1863 8.91158 12.0074C8.55368 11.6495 8.55368 11.0589 8.91158 10.6832L10.1642 9.43053H4.56316C4.04421 9.43053 3.63263 9.01895 3.63263 8.5C3.63263 7.98105 4.04421 7.56947 4.56316 7.56947H10.1821L8.92947 6.31684C8.57158 5.95895 8.57158 5.36842 8.92947 4.99263C9.28737 4.63474 9.8779 4.63474 10.2537 4.99263L13.0811 7.83789C13.4568 8.21368 13.4568 8.78632 13.0811 9.16211Z" fill=""/>
-                            </svg>
-                        </a>
+            <div class="swiper quarrix_hero_swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/home2/quarrix-hero-image.png');">
+                            <div class="quarrix_hero__text_wrapper">
+                                <h1>For a Beautiful, Healthy Home Inside and Out</h1>
+                                <p>Quarrix offers durable, efficient roofing solutions that enhance your home’s beauty and protect it for years to come.</p>
+                                <div class="quarrix_hero__button_wrapper">
+                                    <a class="quarrix_hero__button btn btn-white" href="https://www.quarrix.com/Contact-Forms/Contact-Us">
+                                        GET IN TOUCH
+                                        <svg width="17" height="17" viewBox="0 0 17 17" fill="#055641" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M8.5 0C3.81158 0 0 3.81158 0 8.5C0 13.1884 3.81158 17 8.5 17C13.1884 17 17 13.1884 17 8.5C17 3.81158 13.1884 0 8.5 0ZM13.0811 9.16211L10.2358 12.0074C10.0568 12.1863 9.82421 12.2758 9.57368 12.2758C9.32316 12.2758 9.09053 12.1863 8.91158 12.0074C8.55368 11.6495 8.55368 11.0589 8.91158 10.6832L10.1642 9.43053H4.56316C4.04421 9.43053 3.63263 9.01895 3.63263 8.5C3.63263 7.98105 4.04421 7.56947 4.56316 7.56947H10.1821L8.92947 6.31684C8.57158 5.95895 8.57158 5.36842 8.92947 4.99263C9.28737 4.63474 9.8779 4.63474 10.2537 4.99263L13.0811 7.83789C13.4568 8.21368 13.4568 8.78632 13.0811 9.16211Z" fill=""/>
+                                        </svg>
+                                    </a>
+                                    <a class="quarrix_hero__button btn btn-transparent" href="https://www.quarrix.com/About-Us/About-Us-(1)">
+                                        LEARN MORE
+                                        <svg width="17" height="17" viewBox="0 0 17 17" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M8.5 0C3.81158 0 0 3.81158 0 8.5C0 13.1884 3.81158 17 8.5 17C13.1884 17 17 13.1884 17 8.5C17 3.81158 13.1884 0 8.5 0ZM13.0811 9.16211L10.2358 12.0074C10.0568 12.1863 9.82421 12.2758 9.57368 12.2758C9.32316 12.2758 9.09053 12.1863 8.91158 12.0074C8.55368 11.6495 8.55368 11.0589 8.91158 10.6832L10.1642 9.43053H4.56316C4.04421 9.43053 3.63263 9.01895 3.63263 8.5C3.63263 7.98105 4.04421 7.56947 4.56316 7.56947H10.1821L8.92947 6.31684C8.57158 5.95895 8.57158 5.36842 8.92947 4.99263C9.28737 4.63474 9.8779 4.63474 10.2537 4.99263L13.0811 7.83789C13.4568 8.21368 13.4568 8.78632 13.0811 9.16211Z" fill=""/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="quarrix_hero">
+                            <video class="quarrix_hero_video" muted autoplay loop playsinline>
+                                <source src="https://www.quarrix.com/QuarrixDev/media/Video/Quarrix_Homepage_Banner.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="quarrix_hero">
+                            <video class="quarrix_hero_video" muted autoplay loop playsinline>
+                                <source src="https://www.quarrix.com/QuarrixDev/media/Video/StormStop-Smokehouse-Web-Video.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/1620x825/Winner-of-the-People%E2%80%99s-Choice-Award-%E2%80%93-IRE-2025.png');"></div>
                     </div>
                 </div>
             </div>
