fix: fixed hero swiper

--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -38,21 +38,27 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="quarrix_hero">
-                            <video class="quarrix_hero_video" muted autoplay loop playsinline>
-                                <source src="https://www.quarrix.com/QuarrixDev/media/Video/Quarrix_Homepage_Banner.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <a href="#!">
+                            <div class="quarrix_hero">
+                                <video class="quarrix_hero_video" muted autoplay loop playsinline>
+                                    <source src="https://www.quarrix.com/QuarrixDev/media/Video/Quarrix_Homepage_Banner.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
-                        <div class="quarrix_hero">
-                            <video class="quarrix_hero_video" muted autoplay loop playsinline>
-                                <source src="https://www.quarrix.com/QuarrixDev/media/Video/StormStop-Smokehouse-Web-Video.mp4" type="video/mp4">
-                            </video>
-                        </div>
+                        <a href="#!">
+                            <div class="quarrix_hero">
+                                <video class="quarrix_hero_video" muted autoplay loop playsinline>
+                                    <source src="https://www.quarrix.com/QuarrixDev/media/Video/StormStop-Smokehouse-Web-Video.mp4" type="video/mp4">
+                                </video>
+                            </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
-                        <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/1620x825/Winner-of-the-People%E2%80%99s-Choice-Award-%E2%80%93-IRE-2025.png');"></div>
+                        <a href="#!">
+                            <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/1620x825/Winner-of-the-People%E2%80%99s-Choice-Award-%E2%80%93-IRE-2025.png');"></div>
+                        </a>
                     </div>
                 </div>
             </div>
