--- a/Landing Pages/home-page.html
+++ b/Landing Pages/home-page.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#!">
+                        <a href="https://www.quarrix.com/Products/Wall-Protection/ProTect-Siding-Starter">
                             <div class="quarrix_hero">
                                 <video class="quarrix_hero_video" muted autoplay loop playsinline>
                                     <source src="https://www.quarrix.com/QuarrixDev/media/Video/Quarrix_Homepage_Banner.mp4" type="video/mp4">
@@ -47,7 +47,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#!">
+                        <a href="https://www.quarrix.com/Products/Attic-Protection/StormStop-Ridge-Vent">
                             <div class="quarrix_hero">
                                 <video class="quarrix_hero_video" muted autoplay loop playsinline>
                                     <source src="https://www.quarrix.com/QuarrixDev/media/Video/StormStop-Smokehouse-Web-Video.mp4" type="video/mp4">
@@ -56,7 +56,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#!">
+                        <a href="https://www.quarrix.com/Products/Wall-Protection/ProTect-Siding-Starter">
                             <div class="quarrix_hero" style="background-image: url('https://www.quarrix.com/QuarrixDev/media/1620x825/Winner-of-the-People%E2%80%99s-Choice-Award-%E2%80%93-IRE-2025.png');"></div>
                         </a>
                     </div>
